appear to have fixed footer issues on mobile and web

--- a/main.css
+++ b/main.css
@@ -64,10 +64,10 @@ html, body {
     position: relative;
     background-color: white;
     width: 100%;
+    min-height: 100vh;
 }
 .page .page-content {
     position: relative;
-    padding: 0;
     width: auto;
     height: 100%;
     padding: 2% 0 10% 0;
@@ -117,7 +117,6 @@ html, body {
 }
 .footer {
     position: relative;
-    bottom: -20%;
     background-color: rgb(0, 50, 95);
     width: 100%;
     height: 20%;
